Angular-Serverless-SignalR/Helm/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: angular-signalr
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - hosts:
        - angular-signalr.jpcloud.tk
      secretName: angular-signalr-jpcloud-tls
  rules:
    - host: angular-signalr.jpcloud.tk
      http:
        paths:
          - backend:
              serviceName: sw-0-signalr-web
              servicePort: 80
            path: /(.*)
